// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetails MsgBeginRedelegate has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Redelegated
      
        <b>
          0.01
        </b>
         
        <span>
          ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    From 
    
      <router-link
        to="staking/validators/cosmosvaloper1sjllsnasdmasakjshdlkdhjasldnasd"
      >
        
      cosmosvaloper…nasd 
      </router-link>
      To 
    
      <router-link
        to="staking/validators/cosmosvaloper1uaisjdnidjnlaskjdnlkjasndlkadjn"
      >
        
      cosmosvaloper…adjn
    
      </router-link>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000283
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #726616 
      </router-link>
      
    @ Jun 19th 2019 14:45:43
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgCreateValidator has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #626102 
      </router-link>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgDeposit has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p
        class="tx__content__caption__title"
      >
        
      Deposited
      
        <b>
          0.2345
        </b>
         
        <span>
          ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    On
    
      <router-link
        to="/governance/2"
      >
        Proposal #2
      </router-link>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000069
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #626103 
      </router-link>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgEditValidator has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Edit validator
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    Monikor 
    
      <router-link
        to="staking/validators/cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj"
      >
        
      cosmos…dlkj
    
      </router-link>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #626102 
      </router-link>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgSend 1 has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    validators="[object Object]"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Sent
      
        <b>
          0.2345
        </b>
         
        <span>
          ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
      From 
      
      <div
        class="bech32-address"
      >
        <div
          class="address"
          id="address"
        >
          
    cosmos…dlkj
  
        </div>
         
        <div
          class="copied"
        >
          <i
            class="material-icons"
          >
            check
          </i>
          <span>
            Copied
          </span>
        </div>
      </div>
       to 
      
      <div
        class="bech32-address"
      >
        <div
          class="address"
          id="address"
        >
          
    cosmos…dlkj
  
        </div>
         
        <div
          class="copied"
        >
          <i
            class="material-icons"
          >
            check
          </i>
          <span>
            Copied
          </span>
        </div>
      </div>
       
      <span>
         - (Sent via Lunie)
      </span>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000037
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #1086769 
      </router-link>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgSend 2 has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    validators="[object Object]"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Sent
      
        <b>
          0.2345
        </b>
         
        <span>
          ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
      To 
      
      <div
        class="bech32-address"
      >
        <div
          class="address"
          id="address"
        >
          
    cosmos…sdas
  
        </div>
         
        <div
          class="copied"
        >
          <i
            class="material-icons"
          >
            check
          </i>
          <span>
            Copied
          </span>
        </div>
      </div>
       
      <span>
         - (Sent via Lunie)
      </span>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000037
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #1086769 
      </router-link>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgSend 3 has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    validators="[object Object]"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Sent
      
        <b>
          0.2345
        </b>
         
        <span>
          ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      To yourself! 
      <span>
         - (Sent via Lunie)
      </span>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000037
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #1086769 
      </router-link>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgSend 4 has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    validators="[object Object]"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Received
      
        <b>
          0.2345
        </b>
         
        <span>
          ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
      From 
      
      <div
        class="bech32-address"
      >
        <div
          class="address"
          id="address"
        >
          
    cosmos…1212
  
        </div>
         
        <div
          class="copied"
        >
          <i
            class="material-icons"
          >
            check
          </i>
          <span>
            Copied
          </span>
        </div>
      </div>
       
      <span>
         - (Sent via Lunie)
      </span>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000037
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #1086769 
      </router-link>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgSetWithdrawAddress has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Update withdraw address
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    To cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj
  
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #626102 
      </router-link>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgSetWithdrawValidatorCommission has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Withdraw validator commission
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    From 
    
      <router-link
        to="staking/validators/cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj"
      >
        cosmos…dlkj
      </router-link>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #626102 
      </router-link>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgUndelegate has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Undelegated
      
        <b>
          0.05
        </b>
         
        <span>
          ATOM
        </span>
         
        <span
          class="tx-unbonding__time-diff"
        >
          
        (liquid in 50 years)
      
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    From 
    
      <router-link
        to="staking/validators/cosmosvaloper1lsajkdalskdjhasldkahsdljkalskdjhlaks"
      >
        
      cosmosvaloper…laks
    
      </router-link>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.004141
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #1248479 
      </router-link>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgUndelegate has the expected html structure 2`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p
        class="tx__content__caption__title"
      >
        
      Delegated
      
        <b>
          0.05
        </b>
         
        <span>
          ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    To 
    
      <router-link
        to="staking/validators/cosmosvaloper1uaisjdnidjnlaskjdnlkjasndlkadjn"
      >
        
      cosmosvaloper…adjn
    
      </router-link>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000166
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #726599 
      </router-link>
      
    @ Jun 19th 2019 14:43:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgUndelegate has the expected html structure 3`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Withdrawal
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    From 
    
      <router-link
        to="staking/validators/cosmosvaloper1sjllsnasdmasakjshdlkdhjasldnasdnadn"
      >
        cosmosvaloper…nadn
      </router-link>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #626102 
      </router-link>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgUndelegate has the expected html structure 4`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Submitted text proposal
      
        <b>
          0.2
        </b>
         
        <span>
          ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    Title
    
      <i>
        Test title
      </i>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000069
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #626102 
      </router-link>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgUnjail has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Unjail
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    Moniker:
    
      <router-link
        to="staking/validators/cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj"
      >
        cosmos…dlkj
      </router-link>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #626102 
      </router-link>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails MsgVote has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Voted NoWithVeto
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    On 
    
      <router-link
        to="/governance/13"
      >
        Proposal #13
      </router-link>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000069
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #626103 
      </router-link>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails Unknown transaction returns empty string 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000037
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link
        to="[object Object]"
      >
        Block #1086769 
      </router-link>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;
